# pt-tutor

./: .gitignore  Pipfile  README.md  dash_app.py  pyproject.toml  requirements.txt  transcript1.txt
.devcontainer/: devcontainer.json
pt_tutor/: app.py  audio_chat.py  chat.py  dash_app.py  text_chat.py
pt_tutor/.streamlit/: config.toml
pt_tutor/data/.streamlit/: config.toml
pt_tutor/data/seed_vocab/: dining_out.csv
pt_tutor/utils/: audio_modules.py  audio_testing.py  database.py  functions.py  graph.py  instructions.py
pt_tutor/vocab/: dining_out.csv  weather.csv  weekend_recap.csv
