[tool.poetry]
name = "pt-tutor"
version = "0.1.0"
description = ""
authors = ["Scott Bastek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.0"
attrs = "24.2.0"
blinker = "1.8.2"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-default-group = "1.2.4"
dash = "2.18.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
distro = "1.9.0"
flask = "3.0.3"
frozenlist = "1.4.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
idna = "3.10"
importlib-metadata = "8.5.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
jiter = "0.5.0"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain = ">=0.3.14,<0.4.0"
langchain-core = "^0.3.12"
langchain-text-splitters = ">=0.3.3,<0.4.0"
langsmith = "^0.1.17"
llm = "0.16"
markupsafe = "2.1.5"
multidict = "6.1.0"
nest-asyncio = "1.6.0"
numpy = "1.26.4"
openai = "^1.50.1"
orjson = "3.10.9"
packaging = "24.1"
pandas = "2.2.3"
plotly = "5.24.1"
pluggy = "1.5.0"
propcache = "0.2.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-ulid = "2.7.0"
pytz = "2024.2"
pyyaml = "6.0.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
setuptools = "75.1.0"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
sqlite-fts4 = "1.0.3"
sqlite-migrate = "0.1b0"
sqlite-utils = "3.37"
tabulate = "0.9.0"
tenacity = "9.0.0"
tqdm = "4.66.5"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
werkzeug = "3.0.4"
yarl = "1.16.0"
zipp = "3.20.2"
langchain-openai = "^0.2.12"
dash-dangerously-set-inner-html = "^0.0.2"
streamlit = "^1.41.0"
langchain-community = "^0.3.14"
langgraph = "^0.2.61"
wordcloud = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
