[tool.poetry]
name = "pt-tutor"
version = "0.1.0"
description = ""
authors = ["Scott Bastek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.0"
openai = "^1.50.1"
langchain = ">=0.3.14,<0.4.0"
pandas = "2.2.3"
st-supabase-connection = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
